--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ before_install:
     - docker build -t gbelinelo/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-    - docker run gbelinelo/react-test npm test -- --coverage
-
+    - docker run -e CI=true gbelinelo/react-test npm test
+    
 after_success:
     - docker build -t gbelinelo/multi-client ./client
     - docker build -t gbelinelo/multi-nginx ./nginx
