--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ after_success:
 
 deploy:
     provider: elasticbeanstalk
-    region: sa-east-1
+    region: us-east-1
     app: multi-docker
     env: MultiDocker-env
     bucket_name: elasticbeanstalk-sa-east-1-934285670803
